# motor-stubs

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  generator.py  poetry.toml  pyproject.toml  setup.py
motor-stubs/: core.pyi  metaprogramming.py  motor_asyncio.pyi
motor-stubs/motor/: core.pyi  motor_asyncio.pyi
src/motor_stubs/motor/: __init__.pyi  motor_asyncio.pyi
